# custom-seed-vc

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml  pyrightconfig.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
configs/: config.json
configs/astral_quantization/: default_2048.yml  default_32.yml
configs/presets/: config_dit_mel_seed_uvit_whisper_base_f0_44k.yml  config_dit_mel_seed_uvit_whisper_small_wavenet.yml  config_dit_mel_seed_uvit_xlsr_tiny.yml
docker/socketio/: Dockerfile  docker-compose.yml
docs/original/: EVAL.md  README-JA.md  README-ZH.md  README.md
examples/fine-tuning/: README.md  checkpoints  run.sh
examples/fine-tuning/local/: eval.py  validate_dataset.py
examples/realtime-vc-via-socketio/: README.md
seed_vc/: __init__.py  hf_utils.py  optimizers.py  wrapper.py
seed_vc/data/: __init__.py  ft_dataset.py
seed_vc/modules/: __init__.py  audio.py  commons.py  diffusion_transformer.py  dnsmos_computor.py  encodec.py  flow_matching.py  length_regulator.py  rmvpe.py  wavenet.py
seed_vc/modules/astral_quantization/: __init__.py  bsq.py  convnext.py  default_model.py  transformer.py
seed_vc/modules/bigvgan/: __init__.py  activations.py  bigvgan.py  config.json  env.py  meldataset.py  utils.py
seed_vc/modules/bigvgan/alias_free_activation/cuda/: __init__.py  activation1d.py  load.py
seed_vc/modules/bigvgan/alias_free_activation/torch/: __init__.py  act.py  filter.py  resample.py
seed_vc/modules/campplus/: DTDNN.py  __init__.py  classifier.py  layers.py
seed_vc/modules/hifigan/: __init__.py  f0_predictor.py  generator.py
seed_vc/modules/openvoice/: __init__.py  api.py  attentions.py  commons.py  mel_processing.py  models.py  modules.py  openvoice_app.py  se_extractor.py  transforms.py  utils.py
seed_vc/modules/openvoice/checkpoints_v2/converter/: config.json
seed_vc/modules/v2/: __init__.py  ar.py  cfm.py  dit_model.py  dit_wrapper.py  length_regulator.py  model.py  vc_wrapper.py
seed_vc/socketio/: __init__.py  api.py  client.py  model.py  schemas.py  server.py
tests/: test_audio.py
tests/socketio/: test_api.py  test_api_client_restrictions.py  test_client.py  test_integration.py  test_model.py  test_rtf_monitoring.py  test_server.py
utils/: get_version.sh  parse_options.sh
